kubernetes/core/gateway-api/resources/gateway.yml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "*.chkpwd.com"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 172.16.16.55
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      hostname: "*.chkpwd.com"
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "*.chkpwd.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: main-cert
            namespace: security
      allowedRoutes:
        namespaces:
          from: All
