kubernetes/core/gateway-api/resources/public-class.yml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname chkpwd.com
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 172.16.16.56
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/target: *hostname
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      hostname: "*.chkpwd.com"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      hostname: "*.chkpwd.com"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: chkpwd-com-tls
      name: https
      allowedRoutes:
        namespaces:
          from: All
