kubernetes/core/gateway-api/resources/redirect-route.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http-redirect
  namespace: kube-system
spec:
  parentRefs:
    - namespace: kube-system
      name: private
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301 # no temporary redirect
